styles/git-log.less
@import 'syntax-variables';
@import 'ui-variables';

@padding: 1em;
@margin: @padding - 0.05em;
@padding-bigger: 1.5em;

@gravatar-size: 64px;
@info-padding-top: 0.5em;

.git-log {
    overflow: auto;
    background-color: @syntax-gutter-background-color;
    color: @syntax-text-color;
    overflow: hidden;
    display: flex;
    flex-direction: column;

    h2 {
        margin: 0px;
        font-family: inherit;
        font-size: 1.1em;
    }

    p {
        margin: 0px;
        line-height: inherit;
        padding: 0 @padding;
    }

    .panels {
        display: -webkit-flex;
        -webkit-flex-direction: row;
        overflow: auto;
    }

    .main {
        position: relative;
        white-space: nowrap;

        h2 {
            border-bottom: rgba(255,255,255,.5)1px solid;
            background-color: rgba(0,0,0,.3);
            padding: 10px 0;
            text-align: center;
        }

        p {
            position: relative;
            overflow: hidden;
            text-overflow: ellipsis;
            background: @syntax-background-color;

            &:nth-child(odd) {
                //background: rgba(0,0,0,0.3);
            }

            &:nth-child(even) {
                //background: rgba(0,0,0,0.3);
            }

            span {
                display: inline-block;
                border: 1px solid @base-border-color;
                margin-right: 4px;
                padding: 0 2px;
                border-radius: 4px;
                color: @text-color-selected;
            }
        }

        .list, .list-head {
            position: relative;
            text-align: left;
            margin: 0 -@margin;
        }
    }

    .info {
        flex-basis: 35%;
        flex-direction: column;
        flex-shrink: 0;
        position: relative;
        //background-color: rgba(0,0,0,0.6);

        h2 {
            border: none;
            text-align: left;
            line-height: inherit;
            padding: 0 1em;
            flex-shrink: 0;
            border: none;
            background: none !important;
            font-size: 1em;
            font-weight: bold;

            &:first-child {
                padding-top: @info-padding-top;
            }

            span {
                font-weight: normal;
                font-size: 1em;
                padding-left: 8px;
            }
        }
        p {
            padding-top: 10px;
            padding-top: 10px;
            //margin-bottom: 0.5em;
            //background: none !important;
            flex-shrink: 0;
        }
    }



    .info-image {
        position: absolute;
        top: @info-padding-top;
        right: 1em;

        img {
            width: @gravatar-size;

            &:first-child {
                margin-right: 1px;
            }
        }
    }


    .column {
        text-align: center;
        flex: 1 0;
        padding: 0 @padding;
    }

    .graph {
        position: absolute;
        z-index: 1;
        //lex: 0 0 auto !important;
        //padding: 0 @padding;
    }

    svg {
        margin: 0 1em;
    }

    .table {
        width: 100%;
        display: flex;
        flex: 1 0;
    }

    /*.comments {
        flex-basis: 70%;
        p::before, p::after {
            content: "";
            display: block;
            position: absolute;
            top: 0px;
            bottom: 0px;
            background: inherit;
        }
        p::after {
            z-index: 4;
            opacity: 0;
        }
    }

    .commit, .date, .author {
        flex-basis: 10%;
    }

    .commit p {
        padding-left: @padding-bigger;
    }
*/
    .resize-handle {
        position: absolute;
        width: 10px;
        top: 0;
        bottom: 0;
        right: -5px;
        cursor: col-resize;
    }

    .added {
        background: url(atom://git-log/resources/added.png);
    }

    .deleted {
        background: url(atom://git-log/resources/deleted.png);
    }

    .modified {
        background: url(atom://git-log/resources/modified.png);
    }
}



.git-log {
    table {
        table-layout: fixed;
    }

    table,tbody,th,td,tr {
        border:0px;
        padding:1px;
        margin:0px;
    }

    td {
        overflow: hidden;
        text-overflow: ellipsis;
    }

    table, thead {
        width: 100%;
    }

    thead p {
        font-size: 1.1em;
        font-weight: normal;
        padding-top: 8px;
        padding-bottom: 8px;
        text-align: center;
    }

    .main {
        tbody tr td:first-child {
            & > p:after {
                content: "";
                display: block;
                position: absolute;
                top: 0px;
                bottom: 0px;
                right: 0;
                left: 0;
                z-index: 3;
                opacity: 0;
            }
        }
    }

    .comments {
        flex-basis: 70%;
    }

    .commit, .date, .author {
        flex-basis: 10%;
    }

    .info {
        margin-top: 2px;
        margin-bottom: 2px;
    }

    .info-data {
        //border-top: solid 5px rgba(0,0,0,0.3);
        margin: 2px;
        margin-bottom: 1px;
        padding-bottom: 8px;
        position: relative;
        //background-color: rgba(0,0,0,.3);
        background: @syntax-background-color;
        flex-shrink: 0;

        p {
            background: none;
            padding-bottom: 1.3em;
        }
    }

    .info-file {
        display: flex;
        flex-shrink: 0;
        //border-top: solid 1px;
        margin-top: 1px;
        margin-bottom: 2px;

        .list-head {
            border-bottom: solid 1px;
            margin: 0 -@margin;
        }
        .column {
            text-align: left;
        }
        p {
            //background-color: rgba(0,0,0,0.3);
            background: @syntax-background-color;
        }

        tbody tr {
            &:last-child p {
                padding-bottom: 4px;
            }
            td:nth-child(4), td:nth-child(5) {
                text-align: center;
            }
        }
    }
    .log-highlight p {
        background-color: @syntax-selection-color;
    }
}

.color-1 { 
  background-color: @background-color-info;
}

.color-1-fill { 
  fill: @background-color-info;
}

.color-1-stroke { 
  stroke: @background-color-info;
}

.color-2 { 
  background-color: @background-color-success;
}

.color-2-fill { 
  fill: @background-color-success;
}

.color-2-stroke { 
  stroke: @background-color-success;
}

.color-3 { 
  background-color: @background-color-warning;
}

.color-3-fill { 
  fill: @background-color-warning;
}

.color-3-stroke { 
  stroke: @background-color-warning;
}

.color-4 { 
  background-color: @background-color-error;
}

.color-4-fill { 
  fill: @background-color-error;
}

.color-4-stroke { 
  stroke: @background-color-error;
}

.color-5 { 
  background-color: @ui-site-color-1;
}

.color-5-fill { 
  fill: @ui-site-color-1;
}

.color-5-stroke { 
  stroke: @ui-site-color-1;
}

.color-6 { 
  background-color: @ui-site-color-2;
}

.color-6-fill { 
  fill: @ui-site-color-2;
}

.color-6-stroke { 
  stroke: @ui-site-color-2;
}

.color-7 { 
  background-color: @ui-site-color-3;
}

.color-7-fill { 
  fill: @ui-site-color-3;
}

.color-7-stroke { 
  stroke: @ui-site-color-3;
}

.color-8 { 
  background-color: @ui-site-color-4;
}

.color-8-fill { 
  fill: @ui-site-color-4;
}

.color-8-stroke { 
  stroke: @ui-site-color-4;
}

.color-9 { 
  background-color: @ui-site-color-5;
}

.color-9-fill { 
  fill: @ui-site-color-5;
}

.color-9-stroke { 
  stroke: @ui-site-color-5;
}

